# fluffy-penguin

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: basic.rs  gym_cart_pole.rs  gym_mountain_car.rs  gym_mountain_car_continuous.rs  gym_mountain_car_discrete.rs  gym_pendulum.rs  mnist.rs  panda.rs  playground.rs
src/: activation.rs  cge.rs  error.rs  lib.rs  utils.rs
src/cge/: mod.rs  network.rs  node.rs
src/genetic_algorithm/: individual.rs  mod.rs  mutation.rs  population.rs
tests/: individual.rs  population.rs
