[package]
name = "fluffy-penguin"
version = "0.2.2"
authors = [
    "meidhy <dymayday@gmail.com>",
    "MathisWellmann <wellmannmathis@gmail.com>",
]

[dependencies]
rand = "0.6.0"
rayon = ""
tokio-threadpool = ""
futures = ""
serde = ""
serde_derive = ""
bincode = ""
fnv = ""

gym-rs = { git = "https://github.com/MathisWellmann/gym-rs", optional = true }

[dev-dependencies]
vision = ""
rulinalg = ""

[[example]]
name = "gym_cart_pole"
required-features = ["gym-rs"]

[[example]]
name = "gym_mountain_car_discrete"
required-features = ["gym-rs"]

[[example]]
name = "gym_mountain_car_continuous"
required-features = ["gym-rs"]

[[example]]
name = "gym_pendulum"
required-features = ["gym-rs"]

[[example]]
name = "basic"

[[example]]
name = "mnist"

[[example]]
name = "playground"


# [profile.release]
# lto = true
# codegen-units = 1
# debug = true
